Bug #13952
closedString#succ not updating code range
Description
I'm seeing some strange behavior with String#succ and updating code ranges. I haven't yet traced the code to see what the culprit is, but I'm reproducing my findings here so they don't get lost (and maybe someone has a better idea of what's going on.)
This sequence of calls produces the expected output.
x = "\xFF".force_encoding("binary")
y = x.succ
z = String.new
z << 0x01 << 0x00
puts "x ASCII-only?: #{x.ascii_only?}"
puts "y ASCII-only?: #{y.ascii_only?}"
puts "z ASCII-only?: #{z.ascii_only?}"
puts "y Encoding: #{y.encoding}"
puts "y Bytes: #{y.bytes}"
puts "z Encoding: #{z.encoding}"
puts "z Bytes: #{z.bytes}"
The output is:
x ASCII-only?: false
y ASCII-only?: true
z ASCII-only?: true
y Encoding: ASCII-8BIT
y Bytes: [1, 0]
z Encoding: ASCII-8BIT
z Bytes: [1, 0]
However, by inserting a call that would force x to calculate its code range prior to the String#succ call, we get a different set of results:
x = "\xFF".force_encoding("binary")
x.ascii_only?
y = x.succ
z = String.new
z << 0x01 << 0x00
puts "x ASCII-only?: #{x.ascii_only?}"
puts "y ASCII-only?: #{y.ascii_only?}"
puts "z ASCII-only?: #{z.ascii_only?}"
puts "y Encoding: #{y.encoding}"
puts "y Bytes: #{y.bytes}"
puts "z Encoding: #{z.encoding}"
puts "z Bytes: #{z.bytes}"
Now we see that y isn't considered to be ASCII-only, even though it has the exact same encoding and byte sequence as z (and as y in the previous call sequence that did work):
x ASCII-only?: false
y ASCII-only?: false
z ASCII-only?: true
y Encoding: ASCII-8BIT
y Bytes: [1, 0]
z Encoding: ASCII-8BIT
z Bytes: [1, 0]
Having not looked at it, it looks like the code range isn't updated and we only get the correct result if CR_UNKNOWN hasn't been replaced by some other call that needs the code range.
Updated by nobu (Nobuyoshi Nakada) over 8 years ago
- Status changed from Open to Closed
Applied in changeset trunk|r60066.
string.c: fix ASCII-only on succ
- string.c (str_succ): clear coderange cache when no alpha-numeric
character case, carried part may become ASCII-only.
[ruby-core:83062] [Bug #13952]
Updated by nagachika (Tomoyuki Chikanaga) over 8 years ago
- Backport changed from 2.3: UNKNOWN, 2.4: UNKNOWN to 2.3: REQUIRED, 2.4: REQUIRED
Updated by nagachika (Tomoyuki Chikanaga) over 8 years ago
- Backport changed from 2.3: REQUIRED, 2.4: REQUIRED to 2.3: REQUIRED, 2.4: DONE
ruby_2_4 r61455 merged revision(s) 60066.
Updated by usa (Usaku NAKAMURA) over 8 years ago
- Backport changed from 2.3: REQUIRED, 2.4: DONE to 2.3: DONE, 2.4: DONE
ruby_2_3 r62139 merged revision(s) 60066.